--- a/desafio 12/style.css
+++ b/desafio 12/style.css
@@ -1,13 +1,21 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 
 * {
     margin: 0px;
     padding: 0px;
 }
-
 html, body {
     min-height: 100vh;
     background-color: rgb(231, 226, 226);
+    font-family: var(--font1);
+
 }
 header {
     background-color: black;
@@ -17,6 +25,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -32,6 +42,9 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 20px;
+    font-family: var(--font3);
+    font-size: 2vw;
+
 }
 section.normal {
     background-color: white;
@@ -43,8 +56,8 @@ section.imagem {
 }
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.26);
-    width: 400px;
-    padding: 5px;
+    display:inline-block;
+    padding: 10px;
     border-radius: 10px;
 }
 
