--- a/desafio 12/style.css
+++ b/desafio 12/style.css
@@ -26,7 +26,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--font2);
-    font-size: 10vw;
+    font-size: 8vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -43,7 +43,7 @@ section {
     padding-bottom: 10vh;
     padding-left: 20px;
     font-family: var(--font3);
-    font-size: 2vw;
+    font-size: 3.5vw;
 
 }
 section.normal {
@@ -51,14 +51,25 @@ section.normal {
     color: black;
 }
 section.imagem {
-    background-color: rgb(117, 116, 116);
+    background-color: rgba(36, 35, 35, 0.13);
     color: rgb(255, 255, 255);
+    background-size: cover;
+    box-shadow: inset 6px 6px 10px 0px rgba(0, 0, 0, 0.507) ;
+    background-attachment: fixed;
 }
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.26);
+    background-color: rgba(0, 0, 0, 0.4);
     display:inline-block;
     padding: 10px;
     border-radius: 10px;
+}
+#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 a:hover {
